chore: added new endpoints
