# src/http/models/modelsCitizen.ts
@@ -5,21 +5,15 @@
  * API para gerenciamento de dados de cidadãos do Rio de Janeiro, incluindo autodeclaração de informações e verificação de contato.
  * OpenAPI spec version: 1.0
  */
-import type { ModelsDatalake } from './modelsDatalake'
-import type { ModelsDocumentos } from './modelsDocumentos'
 import type { ModelsEmail } from './modelsEmail'
 import type { ModelsEndereco } from './modelsEndereco'
 import type { ModelsMae } from './modelsMae'
 import type { ModelsNascimento } from './modelsNascimento'
 import type { ModelsObito } from './modelsObito'
-import type { ModelsSaude } from './modelsSaude'
 import type { ModelsTelefone } from './modelsTelefone'
 
 export interface ModelsCitizen {
   cpf?: string
-  cpf_particao?: number
-  datalake?: ModelsDatalake
-  documentos?: ModelsDocumentos
   email?: ModelsEmail
   endereco?: ModelsEndereco
   mae?: ModelsMae
@@ -29,8 +23,6 @@ export interface ModelsCitizen {
   nome_social?: string
   obito?: ModelsObito
   raca?: string
-  row_number?: number
-  saude?: ModelsSaude
   sexo?: string
   telefone?: ModelsTelefone
 }
